💄(frontend) fix alignment of blogpost glimpses
All items should have the same alignment.

--- a/src/frontend/scss/objects/_blogpost_glimpses.scss
+++ b/src/frontend/scss/objects/_blogpost_glimpses.scss
@@ -55,6 +55,11 @@ $glimpse-gutter: 0.6rem;
       align-self: flex-end;
     }
   }
+  .section__grid--33x33x33 > &:nth-child(0n + 2) {
+    @include media-breakpoint-up(lg) {
+      align-self: unset;
+    }
+  }
 
   // Apply card styles for elements
   @include m-o-card(
